[gd_scene load_steps=18 format=3 uid="uid://bshu48avhr84m"]

[ext_resource type="Script" uid="uid://t6u7td5ms1if" path="res://scripts/Title.gd" id="1_6rdx8"]
[ext_resource type="Texture2D" uid="uid://by50jq8m06vsl" path="res://assets/images/kmk-logo.png" id="1_lq0lj"]
[ext_resource type="Texture2D" uid="uid://dj1adthb4xkku" path="res://assets/images/qlyco-logo.png" id="2_2sdm5"]
[ext_resource type="Shader" uid="uid://cb087ulyp1fv7" path="res://shaders/Title.gdshader" id="2_wq2ky"]
[ext_resource type="FontFile" uid="uid://c4t18erth06sl" path="res://assets/fonts/Roboto/static/Roboto-Black.ttf" id="3_uth7j"]
[ext_resource type="PackedScene" uid="uid://dtp8mvdegalnq" path="res://scenes/Room.tscn" id="4_agd63"]
[ext_resource type="AudioStream" uid="uid://dohuvsy7vn6w4" path="res://assets/audio/light-rain-loop.wav" id="7_mh4yb"]
[ext_resource type="FontFile" uid="uid://dn6wiqyu1tcis" path="res://assets/fonts/Tomorrow/Tomorrow-SemiBold.ttf" id="14_qwemb"]
[ext_resource type="PackedScene" uid="uid://ds6u1m1ipdltc" path="res://scenes/Character1.tscn" id="15_6ptrc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wq2ky"]
shader = ExtResource("2_wq2ky")
shader_parameter/scanline_count = 512.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_af2l1"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0

[sub_resource type="Animation" id="Animation_2sdm5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/KMKSplash:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/QLYCOSplash:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ostn1"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_6rdx8"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_6ptrc"]
resource_name = "prompt"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label3D2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_lq0lj"]
resource_name = "splash_op"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/KMKSplash:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/QLYCOSplash:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(4, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iyajp"]
_data = {
&"RESET": SubResource("Animation_2sdm5"),
&"fade_out": SubResource("Animation_ostn1"),
&"idle": SubResource("Animation_6rdx8"),
&"prompt": SubResource("Animation_6ptrc"),
&"splash_op": SubResource("Animation_lq0lj")
}

[node name="Title" type="Node3D"]
script = ExtResource("1_6rdx8")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.863633, 0, 0.504121, 0, 1, 0, -0.504121, 0, 0.863633, 0.62, 0.722403, 1.19097)
size = 2.282

[node name="Shader" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_wq2ky")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Version" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -35.0
offset_right = 100.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_uth7j")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_af2l1")
text = "V1.0"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="KMKSplash" type="TextureRect" parent="Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -159.0
offset_right = 160.0
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lq0lj")

[node name="QLYCOSplash" type="TextureRect" parent="Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -159.0
offset_right = 160.0
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2sdm5")

[node name="SplashPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iyajp")
}
autoplay = "splash_op"

[node name="PromptAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iyajp")
}
autoplay = "prompt"

[node name="FadeAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iyajp")
}
autoplay = "prompt"

[node name="Room" parent="." instance=ExtResource("4_agd63")]

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.248019, 0.929065, -1.6887)
text = "I.N.D.E.X"
font = ExtResource("14_qwemb")
font_size = 48
outline_size = 0
horizontal_alignment = 0

[node name="Label3D2" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.248019, 0.645893, -1.6887)
modulate = Color(1, 1, 1, 0.605403)
text = "[ tap/click to continue ]"
font = ExtResource("14_qwemb")
font_size = 28
outline_size = 0
horizontal_alignment = 0

[node name="Ghost" parent="." instance=ExtResource("15_6ptrc")]
transform = Transform3D(0.306593, 0, 0.951841, 0, 1, 0, -0.951841, 0, 0.306593, -1.53676, -2.98023e-08, -0.376789)

[node name="Transition" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_mh4yb")
autoplay = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="gui_input" from="Control" to="." method="_on_control_gui_input"]
[connection signal="animation_finished" from="SplashPlayer" to="." method="_on_splash_player_animation_finished"]
